# MANGA-READER-BOT

./: Implementation details (C++ Python Web) 654e7e876ab543f8ba953b8b594eacdf.md  MANGA BOT OPEN SOURCE TEAM PROJECT 320b4f7dd316808b8a88d6af949e100d.md  README.md
MANGA READER/ENGINE_C++/: CMakeLists.txt  MANGA_TEST  index.json  main  main.cpp
